--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-<a href="file:///">file test</a>
+<a href="data:text/html,<h1>test</h1>">file test</a>
 </body>
 </html>
